--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#" target="_blank">Alberth Grande</a>.
+        >. Coded by
+        <a
+          href="https://github.com/alberthruado/order-summary-component.git"
+          target="_blank"
+          >Alberth Grande</a
+        >.
       </div>
     </footer>
   </body>
